@startuml
'https://plantuml.com/class-diagram
left to right direction
hide empty members

class MenuController
class EndController
class TiendaController
class JuegoController
class JuegoControllerAcciones
class JuegoControllerInventario

MenuController --> JueguitoFX : setApp()
MenuController ..> MapaLoader : crearGrafo()
MenuController ..> Partida : new + iniciar()
MenuController ..> LoadJSON : cargarPartida()
MenuController : -Button nuevaPartidaBtn\n-Button cargarPartidaBtn\n-Button salirBtn\n+crearGrafo(): GrafoZonas

EndController --> JueguitoFX : volverAlMenu()
EndController : -Label resultadoLabel\n-TextArea logFinal\n-Button volverBtn\n+inicializar(resultado, logs, app)

TiendaController --> JuegoController : setJuegoController()
TiendaController ..> JuegoControllerAcciones : comprar()
TiendaController : -Button comprarBarcaBtn\n-Button comprarMapaBtn\n-Button salirBtn

JuegoController --> Partida
JuegoController --> JueguitoFX : app
JuegoController *-- JuegoControllerAcciones
JuegoController *-- JuegoControllerInventario
JuegoController *-- MapaRenderer
JuegoController *-- UIRenderer
JuegoController *-- SpriteManager
JuegoController : @FXML\n-GridPane mapaGrid\n-StackPane mapaStackPane\n-Label zonaLabel, turnoLabel, vidaLabel\n-ProgressBar vidaBar\n-TextArea logArea\n-ListView<Objeto> inventarioList\n-Button terminarTurnoBtn, guardarBtn, entregarGatoBtn\n-Button usarBtn, equiparBtn, atacarBtn\n-Button interactuarBtn, deshacerMovimientoBtn\n-VBox tiendaPanel\n-TextArea objetosUsadosArea, objetosEquipadosArea\n+inicializar(partida, app)\n+manejarTecla(event)\n-onDeshacerMovimiento()

JuegoControllerAcciones --> Partida
JuegoControllerAcciones --> JuegoController
JuegoControllerAcciones --> JueguitoFX : irAEnd()
JuegoControllerAcciones : +manejarTecla() / moverTecla()\n+atacarTecla() / atacarBoton()\n+interactuarBoton() / terminarTurno()\n+comprar(item, coste) / cerrarTienda()

JuegoControllerInventario --> Partida
JuegoControllerInventario --> JuegoController
JuegoControllerInventario : +seleccionarObjeto()\n+usarObjeto() / equiparObjeto()\n-verificarFinJuego()
@enduml
